--- a/UserChat01/WebContent/css/custom.css
+++ b/UserChat01/WebContent/css/custom.css
@@ -232,4 +232,19 @@ height:40px;
 
 .text-red {
     color: #e74c3c;
-}                
+}   
+
+/* 전체 링크 관련 영역*/      
+a{
+	color:#000000;
+	text-decoration:none;
+	cursor:pointer;	
+}
+/* 내비게이션 영역*/
+/* .navbar-default{ 내비게이션 바 배경 색상
+	background-color:#006DCC;
+	border-color:#006DCC;
+	border-bottom-color:#dddddd;
+	border-bottom-width:3px;
+	border-raidus: 0px;
+}        */
